@@ -22,12 +22,14 @@
 # 3.2 on itanium2-hp-hpux11.22.  Without this option, the libgmp.sl.6
 # required by libgmpxx.sl (ie. in its NEEDED records) is not found by the
 # linker.  FIXME: Presumably libtool should do something about this itself.
+# -lm is needed for t-ops2 which compares the results of trunc and mpf_trunc.
 #
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/tests
 LDADD = -L$(top_builddir)/.libs \
   $(top_builddir)/tests/libtests.la \
   $(top_builddir)/libgmpxx.la \
-  $(top_builddir)/libgmp.la
+  $(top_builddir)/libgmp.la \
+  -lm
 
 if WANT_CXX
 check_PROGRAMS = t-assign t-binary t-cast t-constr t-cxx11 \
